--- a/.config
+++ b/.config
@@ -1,6 +1,8 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_TARGET_KERNEL_PARTSIZE=512
+CONFIG_TARGET_ROOTFS_PARTSIZE=2048
 CONFIG_PACKAGE_XRAY_USE_LARGE_LIMITS=y
 CONFIG_PACKAGE_cgi-io=m
 CONFIG_PACKAGE_ipset=m
